--- a/src/app/components/sidenav-container/sidenav-container.component.html
+++ b/src/app/components/sidenav-container/sidenav-container.component.html
@@ -1,4 +1,8 @@
-<mat-sidenav-container >
-  <app-sidenav></app-sidenav>
-  <app-main-content></app-main-content>
+<mat-sidenav-container>
+  <mat-sidenav mode="side" class="side-bar" opened>
+    <app-sidenav></app-sidenav>
+  </mat-sidenav>
+  <mat-sidenav-content>
+    <app-main-content></app-main-content>
+  </mat-sidenav-content>
 </mat-sidenav-container>
