--- a/src/app/components/sidenav-container/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav-container/sidenav/sidenav.component.html
@@ -1,4 +1,4 @@
-<mat-sidenav mode="side" class="side-bar" opened>
+<div class="side-bar">
   <h3>Dashboard</h3>
   <ul>
     <li>
@@ -7,8 +7,9 @@
       </i>
       Updates
       <span class="count">
-          25
-        </span>
+        25
+      </span>
     </li>
   </ul>
-</mat-sidenav>
+</div>
+
