--- a/src/app/components/sidenav-container/sidenav/sidenav.component.scss
+++ b/src/app/components/sidenav-container/sidenav/sidenav.component.scss
@@ -13,6 +13,7 @@ h3 {
   background: $material-app-gradient-to-top;
   width: 200px;
   padding: 50px 20px;
+  height: calc(100vh - 172px);
   ul {
     padding: 0;
     margin: 0;
